Update test methods with correct stubs